Add a second alert

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script>
       alert("Hello, world!");
+      alert("Oh the humanity!");
     </script>
 
     <title>Hello, world!</title>
